Big Honkin' Update
This is a massive blob update that's being pushed because I'm a terrible programmer who should be ashamed.
There were no granunlar commits during this time. Consider it 'stream of conciousness' programming. I plan
on refactoring this soon. Please don't judge me by it!

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "ATMartin",
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.4.2"
+    "angular": "^1.4.2",
+    "angular-router": "0.0.2"
   }
 }
